fflib-source/main/default/objects/Lead_Field_Mapping__mdt/Lead_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for lead conversion mapping rules.</description>
    <label>Lead Field Mapping</label>
    <pluralLabel>Lead Field Mappings</pluralLabel>
    <nameField>
        <label>Lead Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <customSettingsType>Hierarchy</customSettingsType>
</CustomObject>