fflib-source/main/default/objects/Lead_Field_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to control whether the mapping is executed.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>