fflib-source/main/default/objects/Lead_Field_Mapping__mdt/fields/Condition_Expression__c.field-meta.xml
<CustomField>
    <fullName>Condition_Expression__c</fullName>
    <description>Semicolon delimited DSL for gating the mapping.</description>
    <label>Condition Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>