fflib-source/main/default/objects/Lead_Field_Mapping__mdt/fields/Source_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API__c</fullName>
    <description>Lead field API name that serves as the source.</description>
    <label>Source Field API</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>