fflib-source/main/default/objects/Lead_Field_Mapping__mdt/fields/Target_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API__c</fullName>
    <description>API name of the destination field.</description>
    <label>Target Field API</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>