fflib-source/main/default/objects/Lead_Field_Mapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Destination object token (Account, Contact, Opportunity, Custom:APIName).</description>
    <label>Target Object</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>