fflib-source/main/default/objects/Lead_Field_Mapping__mdt/fields/Transform__c.field-meta.xml
<CustomField>
    <fullName>Transform__c</fullName>
    <description>Logical transformer name (NONE, TRIM, UPPER, PHONE_NORMALIZE, etc.).</description>
    <label>Transform</label>
    <length>80</length>
    <type>Text</type>
</CustomField>